# t32-language-server

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  REUSE.toml  deny.toml
.github/actions/build_steps_os/: action.yml
.github/actions/build_steps_wasm/: action.yml
.github/workflows/: build.yml  build_os.yml  build_wasm.yml  publish.yml  release.yml  vscode.yml
ls/: CHANGELOG.md  Cargo.toml  README.md
ls-stdin/: Cargo.toml
ls-stdin/src/: main.rs
ls-transport-stdio/: Cargo.toml
ls-transport-stdio/src/: main.rs
ls/src/: config.rs  lib.rs  ls.rs  lsp.rs  main.rs  protocol.rs  request.rs  response.rs  stdiotrans.rs  t32.rs  transport.rs  utils.rs
ls/src/ls/: bootloop.rs  doc.rs  language.rs  lsp.rs  mainloop.rs  proc.rs  request.rs  response.rs  semantic.rs  tasks.rs  textdoc.rs  transport.rs  workspace.rs
ls/src/ls/doc/: store.rs  textdoc.rs
ls/src/ls/lsp/: header.rs  jsonrpc.rs
ls/src/ls/tasks/: docsync.rs  lang.rs  progress.rs  runners.rs  startup.rs  workspace.rs
ls/src/ls/tasks/lang/: definitions.rs  folds.rs  references.rs  semantic.rs
ls/src/lsp/: jsonrpc.rs
ls/src/t32/: ast.rs  cache.rs  expressions.rs  macros.rs  parse.rs  path.rs  query.rs
ls/src/t32/query/: captures.rs
ls/tests/: cli.rs  protocol.rs  utils.rs  wasm.rs
ls/tests/samples/: ambiguities.cmm  c.cmm  folds.cmm  orphan.cmm  params.cmm  paths.cmm  semantic.cmm
ls/tests/samples/a/: a.cmm
ls/tests/samples/a/d/: d.cmm  d.cmmt
ls/tests/samples/b/: b.cmm  same.cmm
src/: config.rs  lib.rs  ls.rs  lsp.rs  main.rs  parser.rs  proc.rs  protocol.rs  request.rs  response.rs  transport.rs
src/lsp/: content.rs  header.rs
src/parser/: content.rs  header.rs  scanner.rs
tests/: cli.rs  protocol.rs
vscode/: .vscode-test.mjs  .vscodeignore  .yarnrc  .yarnrc.yml  CHANGELOG.md  README.md  SUPPORT.md  eslint.config.mjs  package.json  tsconfig.json  webpack.config.js
vscode/src/: extension.ts
vscode/src/test/: extension.test.ts
