# SPDX-FileCopyrightText: 2024 Christoph Sax <c_sax@mailbox.org>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "t32-language-server-stdin"
description = "Language server child process for non-blocking stdio read operations"
version = "0.1.0"
authors = ["Christoph Sax <c_sax@mailbox.org>"]
keywords = [
  "language-server",
  "lsp",
  "trace32",
  "lauterbach"
]
categories = ["parsing", "text-editors"]
repository = "https://codeberg.org/xasc/t32-language-server/"
edition = "2021"

[dependencies]
