# SPDX-FileCopyrightText: 2024 Christoph Sax <c_sax@mailbox.org>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "t32-language-server"
description = "Language server for Lauterbach TRACE32® script language"
version = "0.1.0"
authors = ["Christoph Sax <c_sax@mailbox.org>"]
keywords = [
  "language-server",
  "lsp",
  "trace32",
  "lauterbach"
]
categories = ["parsing", "text-editors"]
repository = "https://codeberg.org/xasc/t32-language-server/"
edition = "2021"

include = ["../LICENSES"]
[build-dependencies]
cc="*"

[dependencies]
t32-language-server-transport-stdio = { path = "../ls-transport-stdio",  version = "1.0.0" }
libc = "0.2.169"
serde = { version = ">=1.0.215", features = ["derive"] }
serde_json = ">=1.0"
serde_repr = "0.1.19"
tree-sitter = "0.24.7"
tree-sitter-t32 = ">=4.0.0"
url = "2.5.4"
