# SPDX-FileCopyrightText: 2024 Christoph Sax <c_sax@mailbox.org>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "t32-language-server"
description = "Language server for Lauterbach TRACE32® script language"
version = "0.3.0"
authors = ["Christoph Sax <c_sax@mailbox.org>"]
keywords = [
  "language-server",
  "lsp",
  "trace32",
  "lauterbach"
]
categories = ["parsing", "text-editors"]
repository = "https://codeberg.org/xasc/t32-language-server/"
edition = "2024"

include = ["../LICENSES"]
[build-dependencies]
cc="*"

[dependencies]
serde = { version = ">=1.0.215", features = ["derive"] }
serde_json = ">=1.0"
serde_repr = ">=0.1.19"
tree-sitter = ">=0.25.0"
tree-sitter-t32 = ">=6.0.0"
url = ">=2.5.4"

[target.'cfg(unix)'.dependencies]
libc = ">=0.2.169"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = ">=0.61.0", default-features = false, features = ["Win32_System_Threading"] }
